--- a/Parstagram/Base.lproj/Main.storyboard
+++ b/Parstagram/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -95,7 +95,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostTableViewCell" rowHeight="395" id="JSQ-71-tNV" customClass="PostTableViewCell" customModule="Parstagram" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostTableViewCell" rowHeight="395" id="JSQ-71-tNV" customClass="PostTableViewCell" customModule="Parstagram" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="24.5" width="414" height="395"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JSQ-71-tNV" id="Ly4-c1-8yN">
@@ -116,7 +116,7 @@
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Michael" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qK3-Bo-h3M">
                                                     <rect key="frame" x="20" y="356" width="242" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -127,7 +127,7 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="qK3-Bo-h3M" secondAttribute="bottom" constant="8" id="Hi1-pP-ql4"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="m6M-Li-l0q" secondAttribute="trailing" constant="8" id="LDh-ZF-dJV"/>
                                                 <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="m6M-Li-l0q" secondAttribute="bottom" constant="8" id="P22-v2-6oP"/>
-                                                <constraint firstItem="qK3-Bo-h3M" firstAttribute="leading" secondItem="Ly4-c1-8yN" secondAttribute="leadingMargin" constant="8" id="Shc-fJ-75U"/>
+                                                <constraint firstItem="qK3-Bo-h3M" firstAttribute="leading" secondItem="Ly4-c1-8yN" secondAttribute="leadingMargin" constant="16" id="Shc-fJ-75U"/>
                                                 <constraint firstItem="qK3-Bo-h3M" firstAttribute="top" secondItem="Kcg-Pw-D2q" secondAttribute="bottom" constant="8" id="VL8-7j-RtX"/>
                                                 <constraint firstItem="m6M-Li-l0q" firstAttribute="top" secondItem="Kcg-Pw-D2q" secondAttribute="bottom" constant="8" id="Z14-bU-cP8"/>
                                                 <constraint firstItem="Kcg-Pw-D2q" firstAttribute="leading" secondItem="Ly4-c1-8yN" secondAttribute="leading" constant="8" id="dcv-l1-4o6"/>
@@ -142,6 +142,64 @@
                                             <outlet property="usernameLabel" destination="qK3-Bo-h3M" id="3Fh-ze-tJk"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" rowHeight="47" id="NTZ-Ul-ppa" customClass="CommentCell" customModule="Parstagram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="419.5" width="414" height="47"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NTZ-Ul-ppa" id="qBx-QZ-lrb">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="47"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Michael" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZ7-6l-Gpw">
+                                                    <rect key="frame" x="16" y="8" width="63.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a fake comment." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rjB-0g-ZI8">
+                                                    <rect key="frame" x="87.5" y="8" width="179.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="rjB-0g-ZI8" secondAttribute="bottom" constant="8" id="060-c7-Vro"/>
+                                                <constraint firstItem="lZ7-6l-Gpw" firstAttribute="top" secondItem="qBx-QZ-lrb" secondAttribute="top" constant="8" id="15O-oN-uFc"/>
+                                                <constraint firstItem="rjB-0g-ZI8" firstAttribute="top" secondItem="qBx-QZ-lrb" secondAttribute="top" constant="8" id="1Dx-aY-xYl"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lZ7-6l-Gpw" secondAttribute="bottom" constant="8" id="W9a-3W-Y7r"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rjB-0g-ZI8" secondAttribute="trailing" constant="8" id="ZYU-jP-Q6j"/>
+                                                <constraint firstItem="rjB-0g-ZI8" firstAttribute="leading" secondItem="lZ7-6l-Gpw" secondAttribute="trailing" constant="8" id="boO-ty-3xN"/>
+                                                <constraint firstItem="lZ7-6l-Gpw" firstAttribute="leading" secondItem="qBx-QZ-lrb" secondAttribute="leading" constant="16" id="eUj-dy-rxU"/>
+                                                <constraint firstItem="rjB-0g-ZI8" firstAttribute="leading" secondItem="lZ7-6l-Gpw" secondAttribute="trailing" constant="8" id="fBh-zP-Q4w"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="commentLabel" destination="rjB-0g-ZI8" id="KsH-jo-lQ7"/>
+                                            <outlet property="nameLabel" destination="lZ7-6l-Gpw" id="GGF-jc-Uwk"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddCommentCell" id="Tro-6w-Bae">
+                                        <rect key="frame" x="0.0" y="466.5" width="414" height="37"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tro-6w-Bae" id="K8G-C6-PS4">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="37"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a comment..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q4a-rR-t2O">
+                                                    <rect key="frame" x="16" y="8" width="390" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" systemColor="systemGrayColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="q4a-rR-t2O" firstAttribute="top" secondItem="K8G-C6-PS4" secondAttribute="top" constant="8" id="7bN-o0-oz7"/>
+                                                <constraint firstAttribute="trailing" secondItem="q4a-rR-t2O" secondAttribute="trailing" constant="8" id="Gvj-86-Ojg"/>
+                                                <constraint firstAttribute="bottom" secondItem="q4a-rR-t2O" secondAttribute="bottom" constant="8" id="quH-zH-PE1"/>
+                                                <constraint firstItem="q4a-rR-t2O" firstAttribute="leading" secondItem="K8G-C6-PS4" secondAttribute="leading" constant="16" id="z4p-FB-HE0"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
@@ -149,6 +207,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="gDZ-gz-SF0">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="EVe-EE-cmR">
+                            <connections>
+                                <action selector="onLogoutButton:" destination="3ct-fK-40l" id="jxf-JL-UPJ"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="insta_camera_btn" id="bKR-FD-ASy">
                             <connections>
                                 <segue destination="WS2-cK-Hh0" kind="presentation" id="7RV-dj-it7"/>
@@ -214,7 +277,7 @@
         <!--Navigation Controller-->
         <scene sceneID="Kpm-0R-CPX">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="CaQ-6P-Dtq" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="FeedNavigationController" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="CaQ-6P-Dtq" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Cjd-OQ-PZm">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -236,6 +299,9 @@
         <image name="instagram_logo" width="255" height="108"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
